--- a/aaron.washington/lib/css/styleguide.css
+++ b/aaron.washington/lib/css/styleguide.css
@@ -28,6 +28,7 @@ body {
     margin: 0;
     font-size: 100%;
     font-family: 'Rubik', Arial, sans-serif;
+    overflow-x: hidden;
 }
 
 @font-face {
