--- a/chipman.abigail/lib/css/styleguide.css
+++ b/chipman.abigail/lib/css/styleguide.css
@@ -168,7 +168,7 @@ a:hover {
 }
 
 .nav-crumbs li:not(:first-child)::before {
-  content: "/";
+  content: ">>";
 }
 
 .nav-material a {
@@ -213,7 +213,7 @@ a:hover {
   padding: 0 0.5em;
 }
 .logo {
-  margin-top: 10px;
+  padding-top: 1em;
 }
 /* CARD */
 
@@ -263,8 +263,9 @@ a:hover {
 }
 
 .card.section {
-  height: 90%;
-  padding: 0.5em;
+  height: 75%;
+  padding: 0.25em;
+  margin-top: 0.25em;
   margin-bottom: 0.25em;
   border-radius: 0.5em;
   opacity: 0.8;
@@ -273,7 +274,10 @@ a:hover {
   text-decoration: none;
 }
 .card.section h2 {
+  font-size: 1.75em;
   font-weight: bold;
+  text-align: right;
+  padding-right: 0.5em;
 }
 
 .card img {
@@ -290,7 +294,7 @@ a:hover {
 .view-window-small {
   position: relative;
   overflow: hidden;
-
+  background-position: center;
   background-size: cover;
   background-attachment: scroll;
   height: 15vh;
@@ -301,7 +305,6 @@ a:hover {
   position: relative;
   overflow: hidden;
   background-size: cover;
-  background-position: center;
   background-attachment: fixed;
 }
 
